[field] fix change block too large and doesnt wrap with long strings

--- a/packages/@sanity/field/src/diff/changes/FieldChange.css
+++ b/packages/@sanity/field/src/diff/changes/FieldChange.css
@@ -2,6 +2,7 @@
 
 .root {
   margin-bottom: 1em;
+  overflow: hidden;
 }
 
 .error {
